--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -3,6 +3,7 @@
   --vt-c-white: #ffffff;
   --vt-c-white-soft: #f8f8f8;
   --vt-c-white-mute: #f2f2f2;
+  --primary-color: #3b82f6;
 
   --vt-c-black: #181818;
   --vt-c-black-soft: #222222;
@@ -15,6 +16,8 @@
   --vt-c-divider-dark-1: rgba(84, 84, 84, 0.65);
   --vt-c-divider-dark-2: rgba(84, 84, 84, 0.48);
 
+  --gray-700: #374151;
+  --gray-800: #1f2937;
   --vt-c-text-light-1: var(--vt-c-indigo);
   --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
   --vt-c-text-dark-1: var(--vt-c-white);
