--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -4,6 +4,9 @@
   --vt-c-white-soft: #f8f8f8;
   --vt-c-white-mute: #f2f2f2;
   --primary-color: #3b82f6;
+  --primary-hover: #2563eb;
+  --error-color: #ef4444;
+  --success-color: #10b981;
 
   --vt-c-black: #181818;
   --vt-c-black-soft: #222222;
@@ -16,6 +19,7 @@
   --vt-c-divider-dark-1: rgba(84, 84, 84, 0.65);
   --vt-c-divider-dark-2: rgba(84, 84, 84, 0.48);
 
+  --gray-400: #9ca3af;
   --gray-700: #374151;
   --gray-800: #1f2937;
   --vt-c-text-light-1: var(--vt-c-indigo);
